tests/broken/stray-elseif.stderr
error: Unexpected 'elseif' statement
 --> tests/broken/stray-elseif.rs:4:19
  |
4 | #[oxiplate = "{%- elseif should_do -%}{{ action }}"]
  |                   ^^^^^^
